--- a/static/construction/index.html
+++ b/static/construction/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Elixir - Get Instant Math Help!" property="og:title" />
+    <meta content="jjservers - Caculate tricky algerbra equations in no time!" property="og:title" />
     <meta content="Get world class support for K-12 mathematics." property="og:description" />
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./index.css">
